[gd_scene load_steps=4 format=2]

[ext_resource path="res://game-assets/game-scripts/test-zone-scripts/gimmicks-scripts/log-bridge-script.gd" type="Script" id=1]
[ext_resource path="res://game-assets/game-sprites/levels-sprites/test-zone-assets/test-zone-gimmicks-sprites/log-bridge/stack.png" type="Texture" id=2]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 90.75, 10 )

[node name="Bridge" type="Node2D"]
script = ExtResource( 1 )

[node name="LogContainer" type="Node2D" parent="."]
position = Vector2( 0, 16 )

[node name="StackL" type="Sprite" parent="."]
position = Vector2( -21.5, 1.5 )
texture = ExtResource( 2 )

[node name="StaticBody2D" type="StaticBody2D" parent="StackL"]
position = Vector2( 21.5, 11.5 )

[node name="CollisionPolygon2D" type="CollisionPolygon2D" parent="StackL/StaticBody2D"]
position = Vector2( 0, 3 )
polygon = PoolVector2Array( -8, -8, 29, 8, -8, 8 )
one_way_collision = true

[node name="StackR" type="Sprite" parent="."]
position = Vector2( 181.5, 1.5 )
scale = Vector2( -1, 1 )
texture = ExtResource( 2 )

[node name="StaticBody2D2" type="StaticBody2D" parent="StackR"]
position = Vector2( 5.5, 11.5 )
rotation = 3.14159
scale = Vector2( 1, -1 )
__meta__ = {
"_edit_group_": true
}

[node name="CollisionPolygon2D" type="CollisionPolygon2D" parent="StackR/StaticBody2D2"]
position = Vector2( 0, 3 )
polygon = PoolVector2Array( -8, -8, -46, 8, -8, 8 )
one_way_collision = true

[node name="ActiveArea" type="Area2D" parent="."]
position = Vector2( 79.75, 0 )

[node name="CollShape" type="CollisionShape2D" parent="ActiveArea"]
visible = false
shape = SubResource( 1 )

[connection signal="body_shape_entered" from="ActiveArea" to="." method="_on_ActiveArea_body_shape_entered"]
[connection signal="body_shape_exited" from="ActiveArea" to="." method="_on_ActiveArea_body_shape_exited"]
